--- a/frontEnd/src/assets/base.css
+++ b/frontEnd/src/assets/base.css
@@ -1,10 +1,14 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
+  --vt-c-bg-white-item: rgb(245, 245, 245);
+  --vt-c-box-shadow-white: rgb(163, 163, 163);
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
   --vt-c-black: #181818;
+  --vt-c-bg-black-item: rgb(32, 32, 32);
+  --vt-c-box-shadow-black: rgb(14, 14, 14);
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
@@ -26,6 +30,8 @@
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
+  --color-bg-item: var(--vt-c-bg-white-item);
+  --color-box-shadow: var(--vt-c-box-shadow-white);
 
   --color-border: var(--vt-c-divider-light-2);
   --color-border-hover: var(--vt-c-divider-light-1);
@@ -41,6 +47,8 @@
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
     --color-background-mute: var(--vt-c-black-mute);
+    --color-bg-item: var(--vt-c-bg-black-item);
+    --color-box-shadow: var(--vt-c-box-shadow-black);
 
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
